# omni-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  OmniRAG_Architecture_Document.docx  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/skills/: omnirag-backend.md  omnirag-docker.md  omnirag-frontend.md
.github/workflows/: ci.yml  eval-gate.yml
apps/: __init__.py
apps/api/: __init__.py  dependencies.py  main.py  middleware.py
apps/api/routers/: __init__.py  analytics.py  api_keys.py  auth.py  collections.py  documents.py  feedback.py  health.py  query.py  retrieval.py
apps/frontend/: next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/frontend/app/(app)/: layout.tsx
apps/frontend/app/(app)/analytics/: page.tsx
apps/frontend/app/(app)/chat/: page.tsx
apps/frontend/app/(app)/collections/: page.tsx
apps/frontend/app/(app)/documents/: page.tsx
apps/frontend/app/(auth)/login/: page.tsx
apps/frontend/app/(auth)/register/: page.tsx
apps/frontend/components/analytics/: QueryHistoryTable.tsx  StatCard.tsx  UsageChart.tsx
apps/frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
apps/frontend/components/chat/: ChatInput.tsx  ChatInterface.tsx  MessageBubble.tsx  SourceCard.tsx
apps/frontend/components/collections/: CollectionForm.tsx  CollectionList.tsx
apps/frontend/components/documents/: DocumentList.tsx  DocumentStatusBadge.tsx  UploadDropzone.tsx
apps/frontend/components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
apps/frontend/components/settings/: ApiKeyList.tsx
apps/frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Skeleton.tsx
apps/frontend/context/: AuthContext.tsx
apps/frontend/hooks/: useAnalytics.ts  useChat.ts  useCollections.ts  useDocuments.ts
apps/frontend/lib/: api.ts  auth.ts  utils.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/chat/: page.tsx
apps/frontend/src/app/documents/: page.tsx
apps/frontend/src/components/chat/: ChatInterface.tsx  CitationCard.tsx  MessageList.tsx
apps/frontend/src/components/documents/: DocumentCard.tsx  (+2 more)
apps/frontend/src/lib/: api.ts  types.ts
apps/frontend/types/: api.ts
apps/worker/: __init__.py  main.py
apps/worker/jobs/: __init__.py  ingest.py  reindex.py
core/: __init__.py  cache.py  config.py  db.py  exceptions.py  langfuse.py  logging.py  models.py  qdrant_client.py  rate_limit.py  telemetry.py
core/schemas/: __init__.py  common.py  documents.py  query.py
docs/superpowers/plans/: 2026-04-04-frontend-implementation.md
infra/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
infra/migrations/: env.py
infra/migrations/versions/: 0001_initial_schema.py  27b94e2ece52_create_initial_tables.py  2e528c7b6ade_add_password_hash_to_users.py  add_api_keys_001.py  fix_queries_columns.py  rls_policies_001.py
scripts/: init_qdrant.py
services/: __init__.py  hyde.py  query_analyzer.py  storage.py
services/evaluation/: __init__.py  ragas_runner.py
services/evaluation/golden_dataset/: sample_qa.json
services/ingestion/: __init__.py  chunker.py  embedder.py  parser.py
services/orchestrator/: __init__.py  agent.py  answer_generator.py  tools.py
services/retrieval/: __init__.py  dense.py  fusion.py  reranker.py  sparse.py
tests/eval/: test_ragas.py
tests/integration/: conftest.py  test_ingest.py  test_ingestion.py  test_query_api.py  test_retrieval.py
tests/unit/: test_chunker.py  test_evaluation.py  test_fusion.py  test_health.py
(+4 files in other folders)
